<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonProfileLogout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FriendsProfileActivity">

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:hint="@string/textView_firstName"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toTopOf="@+id/imageViewProfile" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/textView_lastName"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewFirstName"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/textView_phone"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewLastName"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />

    <TextView
        android:id="@+id/textViewTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:hint="@string/textView_go_to_twitter"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/imageViewProfile"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

    <Button
        android:id="@+id/buttonSearchFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/button_searchFriends"
        app:layout_constraintStart_toEndOf="@+id/buttonEditProfile"
        app:layout_constraintTop_toTopOf="@+id/buttonEditProfile" />

    <ImageView

        android:id="@+id/imageViewProfile"
        android:layout_width="191dp"
        android:layout_height="147dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_blue_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/textVİew_album_profile"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewTwitter"
        app:layout_constraintTop_toBottomOf="@+id/textViewTwitter" />

    <Button
        android:id="@+id/buttonEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/textViewAlbum"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlbum" />

    <Button
        android:id="@+id/buttonProfilelogoutttt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="84dp"
        android:text="logout"
        app:layout_constraintStart_toEndOf="@+id/buttonEditProfile"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearchFriends" />


</androidx.constraintlayout.widget.ConstraintLayout>